# pdm-nox-fastapi

./: .flake8  README.md  noxfile.py  pyproject.toml
apps/: test_server.py
