[project]
name = "PDM, nox test"
version = "0.1"
description = "PDM, nox 사용법 테스트"
authors = [
    {name = "VioletStair", email = "violetstair@gmail.com"},
]
dependencies = [
    "fastapi>=0.87.0",
]
requires-python = ">=3.9"
license = {text = "MIT"}
[project.optional-dependencies]

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "pytest>=7.2.0",
    "nox>=2022.8.7",
    "httpx>=0.23.1",
    "flake8>=5.0.4",
    "flake8-import-order>=0.18.1",
]
